# nodaysidle-whispering

./: .gitignore  .gitlab-ci.yml  AGENTS.md  LICENSE  README.md  codemap.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
assets/: AGENTS.md
prompts/: dox-audit.md  release-check.md  repo-orientation.md
scripts/: AGENTS.md  ci-local.sh  package-macos.sh
src/: AGENTS.md  App.tsx  main.tsx  style.css  tauri.ts  types.ts
src-tauri/: AGENTS.md  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  audio.rs  buffer.rs  hotkey.rs  input.rs  lib.rs  main.rs  pipeline.rs  types.rs  vad.rs  whisper.rs
src-tauri/tests/: smoke_test.rs
src/components/: Controls.tsx  ErrorBoundary.tsx  MetricsBar.tsx  SettingsPanel.tsx  Toast.tsx  TranscriptVault.tsx  TranscriptView.tsx
src/lib/: transcriptVault.ts
