[package]
name = "nodaysidle-whispering"
version = "0.1.0"
description = "Low-latency local dictation powered by Tauri, cpal, WebRTC VAD, and whisper.cpp"
authors = ["NODAYSIDLE"]
edition = "2021"

[lib]
name = "nodaysidle_whispering_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.6"
cpal = "0.17.3"
crossbeam-channel = "0.5"
enigo = { version = "0.6.1", default-features = false }
global-hotkey = { version = "0.7.0", features = ["serde"] }
num_cpus = "1.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
webrtc-vad = "0.4.0"
whisper-rs = { version = "0.16.0", features = ["metal"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
